# StreamBaseApp

./: CMakeLists.txt  README.md
include/: Client.h  Server.h
include/collection/: GameGenerator.h  GameGenre.h  RPG.h  Racing.h  Shooter.h
include/communication/: Command.h  CommonMessage.h  Header.h  Reader.h  Writer.h
src/: Client.cpp  Server.cpp
src/collection/: GameGenerator.cpp  GameGenre.cpp  RPG.cpp  Racing.cpp  Shooter.cpp
src/communication/: Command.cpp  CommonMessage.cpp  Header.cpp  Reader.cpp  Writer.cpp
